# lddl-fantasy-analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
lddl/: __init__.py  cli.py  config.py
lddl/analysis/: __init__.py  draft_slots.py  drafts.py  franchises.py  managers.py  picks.py  recommendations.py  snapshots.py  standings.py  trade_value.py  trades.py
lddl/clients/: fantasycalc.py  ktc.py  sleeper.py
lddl/dashboard/: app.py
lddl/ingest/: __init__.py  brackets.py  drafts.py  league_history.py  matchups.py  players.py  transactions.py
lddl/reports/: charts.py  manager_history.py  pdf.py
lddl/snapshot/: __init__.py  ktc.py
lddl/store/: db.py  schema.sql
lddl/validate/: __init__.py  checks.py  report.py
tests/: test_analysis_managers.py  test_analysis_trades.py  test_cli.py  test_fantasycalc.py  test_history_walker.py  test_schema.py  test_sleeper_cache.py  test_validate.py
