[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lddl-fantasy-analysis"
version = "0.1.0"
description = "Local analysis tool for the LDDL dynasty fantasy football league"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Matt Newman" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
    "pandas>=2.2",
    "duckdb>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "weasyprint>=62",
    "jinja2>=3.1",
    "python-dateutil>=2.9",
    "tenacity>=8.2",
]

[project.scripts]
lddl = "lddl.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["lddl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
